# zk-sui-example

./: .gitignore  LICENSE  README.md
circom-compat/: Cargo.toml
circom-compat/src/: main.rs
circuits/MulCircuit/: Cargo.toml
circuits/MulCircuit/src/: main.rs
sui_groth16/: Move.toml
sui_groth16/sources/: bls12381.move  bn254.move
sui_groth16/tests/: groth16.move
