[package]
name = "circom-compat"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-circom = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
color-eyre = "0.6.5"
hex = "0.4.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
